--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@prisma/client": "^6.19.0",
     "groq-sdk": "^0.35.0",
+    "lucide-react": "^0.553.0",
+    "react-chartjs-2": "^5.2.0",
+    "chart.js": "^4.4.1",
     "next": "16.0.3",
     "openai": "^6.9.0",
     "react": "19.2.0",
